@@ -1,3 +1,10 @@
+2009-02-26 Steve Chu <stvchu@gmail.com>
+  * Bugfix: 64bit box can not specify memory pool size larger than 2G with '-m' option
+  * new option '-E' to automatically remove log files that are no longer needed, but PLEASE NOTICE:
+    - "Automatic log file removal is likely to make catastrophic recovery impossible."
+    - "Replication applications will rarely want to configure automatic log file removal as it increases the likelihood a master will be unable to satisfy a client's request for a recent log record." So this option will be disabled when replication is on regardless of whether you specify it.
+  * Bugfix: slight security issue when client specify a negative value length
+
 2009-01-13 Steve Chu <stvchu@gmail.com>
   * some default settings policy changed(because most of us is using powerful box):
    max simultaneous connections ('-c'): 1024 -> 4096
